--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -29,7 +29,7 @@
 <div class="header-container">
   <nb-actions size="small">
 
-    <nb-action class="control-item">
+    <!-- nb-action class="control-item">
       <nb-search
         type="rotate-layout"
         matRipple
@@ -55,10 +55,17 @@
       *nbIsGranted="['view', 'user']"
       matRipple
       [matRippleUnbounded]="true"
-      [matRippleCentered]="true">
+      [matRippleCentered]="true" -->
+    <!-- nb-action class="control-item">
+      <nb-search type="rotate-layout"></nb-search>
+    </nb-action>
+    <nb-action class="control-item" icon="email-outline"></nb-action>
+    <nb-action class="control-item" icon="bell-outline"></nb-action -->
+    <nb-action class="user-action" *nbIsGranted="['view', 'user']" >
       <nb-user [nbContextMenu]="userMenu"
                [onlyPicture]="userPictureOnly"
                [name]="user?.name"
+               nbContextMenuTag="user-context-menu"
                [picture]="user?.picture">
       </nb-user>
     </nb-action>
