okta users basic smart list test component done

--- a/src/app/@admin/admin.component.html
+++ b/src/app/@admin/admin.component.html
@@ -1,3 +1,7 @@
-<p>
+<!-- p>
   admin works!
-</p>
+</p -->
+<ngx-one-column-layout>
+  <nb-menu [items]="menu"></nb-menu>
+  <router-outlet></router-outlet>
+</ngx-one-column-layout>
