--- a/src/app/@admin/users/users.component.html
+++ b/src/app/@admin/users/users.component.html
@@ -1,6 +1,6 @@
 <nb-card>
     <nb-card-header>
-      Personas <nb-alert *ngIf="selectedReg" outline="disabled">
+      Usuarios Okta <nb-alert *ngIf="selectedReg" outline="disabled">
             {{ selectedReg.email }} - {{ selectedReg.firstName }} {{ selectedReg.lastName }}
         </nb-alert>
         <!-- div class="container-btn">
